--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.10.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.0.0-rc.1"
